--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentine's Day</title>
+  <title>Valentine</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container">
-  <h1>Happy Valentine's Day</h1>
-  <h2>Priyanshi 💖</h2>
+<div class="box" id="box">
+  <h3>💖 Happy Valentine's Day 💖</h3>
+  <h1>Priyanshi</h1>
 
-  <div id="content">
-    <p class="question">Will you be my Valentine? 🥹</p>
-  </div>
+  <p id="text">Will you be my Valentine? 🥰</p>
 
-  <div class="buttons">
-    <button class="yes" onclick="yesClicked()">YES ❤️</button>
-    <button class="no" onclick="noClicked()">NO 💔</button>
-  </div>
+  <img id="gif" src="https://media.giphy.com/media/ROF8OQvDmxytW/giphy.gif">
 
-  <img id="gif" src="" alt="">
+  <button class="yes" onclick="yesClick()">YES ❤️</button>
+  <button class="no" onclick="noClick()">NO 💔</button>
 </div>
 
 <script src="script.js"></script>
